@@ -1,4 +1,5 @@
-﻿- Implement tree skipping
+﻿- Implement network skipping
+- Implement tree skipping
 - Automatically create any missing skipfile directories and files when opening a specified skip file via the options panel
 
 
